# plans

./: .buildinfo  .gitignore  CONTRIBUTING.md  README.md  _links.html  about.html  about_cases.html  about_gallery.html  about_theory.html  api.html  api_datasets.html  api_hydrology.html  api_main.html  api_parsers.html  api_tools.html  api_utils.html  badge_source.html  cases.html  data_structures.html  development.html  examples.html  files.html  files_asc.html  files_catalog.html  files_index.html  files_structure.html  gallery.html  genindex.html  index.html  input_catalog.html  install-plans.ps1  ipsum.html  logo.html  objects.inv  projects.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  sphinx-reading-durations.json  (+4 more)
.doctrees/: _links.doctree  about.doctree  about_cases.doctree  about_gallery.doctree  about_theory.doctree  api.doctree  api_datasets.doctree  api_hydrology.doctree  api_main.doctree  api_parsers.doctree  api_tools.doctree  api_utils.doctree  badge_source.doctree  cases.doctree  data_structures.doctree  development.doctree  environment.pickle  examples.doctree  files.doctree  files_asc.doctree  files_catalog.doctree  files_index.doctree  files_structure.doctree  gallery.doctree  index.doctree  input_catalog.doctree  ipsum.doctree  logo.doctree  projects.doctree  system.doctree  theory.doctree  usage.doctree  userguide.doctree
.doctrees/tutorials/: project_01.doctree  raster_01.doctree  timeseries_01.doctree  univar_01.doctree  visuals_01.doctree
.github/workflows/: docs.yaml  style.yaml
_modules/: index.html  plans.html
_modules/plans/: analyst.html  geo.html  project.html  qutils.html  root.html  viewer.html
_modules/plans/datasets/: chrono.html  core.html  spatial.html
_modules/plans/hydrology/: core.html  design.html  downscaled.html  upscaled.html
_modules/plans/parsers/: flare.html  inmet.html  snirh.html
_modules/plans/tools/: analysis_spatial_normals.html  core.html
_sources/: _links.rst.txt  about.rst.txt  about_gallery.rst.txt  about_theory.rst.txt  api.rst.txt  api_tools.rst.txt  api_utils.rst.txt  cases.rst.txt  data_structures.rst.txt  development.rst.txt  examples.rst.txt  files.rst.txt  files_asc.rst.txt  files_index.rst.txt  files_structure.rst.txt  gallery.rst.txt  index.rst.txt  input_catalog.rst.txt  projects.rst.txt  system.rst.txt  theory.rst.txt  usage.rst.txt  userguide.rst.txt
_sources/tutorials/: project_01.ipynb.txt  raster_01.ipynb.txt  timeseries_01.ipynb.txt  univar_01.ipynb.txt  visuals_01.ipynb.txt
dev/: checkout.py  docs.py  style.py  tests.py
dev/templates/: _dist.yaml  _tests.yaml
docs/: _links.rst  about.rst  about_cases.rst  about_theory.rst  api.rst  api_datasets.rst  api_hydrology.rst  api_main.rst  api_parsers.rst  build.py  cases.rst  conf.py  data_structures.rst  development.rst  docs_update.py  examples.rst  files.rst  files_asc.rst  files_catalog.rst  files_index.rst  files_structure.rst  gallery.rst  index.rst  ipsum.rst  logo.rst  projects.rst  system.rst  theory.rst  update_iofiles.py  usage.rst  userguide.rst
docs/_templates/: fig.rst  file_entry_infotable.rst  file_entry_raster.rst  file_entry_table.rst  page.rst
docs/data/: dtypes.csv  fields_climate_series.csv  fields_climate_series_lulc_{scenario}.csv  fields_climate_{lulc-scenario}_lulc_series.csv  fields_dist_area_hist.csv  fields_hist_dist_area.csv  fields_lulc_attributes.csv  fields_lulc_info.csv  fields_lulc_series.csv  fields_parameters_info.csv  fields_project_info.csv  fields_q_obs.csv  fields_qobs_series.csv  fields_simulation.csv  fields_simulation_series.csv  fields_soils_attributes.csv  figs.csv  files_input_optional.csv  files_input_required.csv  files_intermediate.csv  files_output.csv  h_fields_parameters_info.csv  h_fields_project_info.csv  h_fields_project_info_optional.csv  system_bounds.csv  system_init.csv  system_parameters.csv  system_variables.csv
docs/data/samples/: climate_series.csv  climate_series_lulc_{scenario}.csv  lulc_attributes.csv  lulc_series.csv  parameters_info.csv  project_info.csv  qobs_series.csv  soils_attributes.csv
docs/figs/: about.rst  infiltration_pot.rst  logo.rst  model_phases.rst  model_structure.rst  riparian_wetlands.rst
docs/includes/: badge_source.rst  external_links.rst  files_abstracts.rst  files_list.rst  ipsum.rst  short_description.rst  warning_development.rst
docs/tutorials/: project_01.ipynb  timeseries_01.ipynb
examples/: example_project_01.ipynb  example_raster_01.ipynb
src/plans/: __init__.py  analyst.py  cli.py  config.py  geo.py  project.py  qutils.py  root.py  tools.py  tools_old.py  viewer.py
src/plans/data/: .gitkeep  fields.csv  files.csv  tools.csv
src/plans/data/examples/toy/data/: project_info.csv  toy.gpkg
src/plans/data/examples/toy/data/basins/main/: basin.tif  outlets.tif
src/plans/data/examples/toy/data/lulc/observed/: lulc_1985-01-01.tif  lulc_2020-01-01.tif  lulc_2021-01-01.qml  lulc_2021-01-01.tif  lulc_attributes.csv
src/plans/data/examples/toy/data/soils/: soils.tif  soils_attributes.csv
src/plans/data/examples/toy/data/topo/: dem.tif  hand.tif  ldd.tif  slope.tif  twi.tif  upa.tif
src/plans/datasets/: __init__.py  chrono.py  core.py  spatial.py
src/plans/hydrology/: __init__.py  core.py  design.py  downscaled.py  upscaled.py
src/plans/parsers/: __init__.py  flare.py  inmet.py  qgdal.py  snirh.py
src/plans/tools/: analysis_climate_series_lulc.py  analysis_dto.py  analysis_lulc_parameters.py  analysis_lulc_series.py  analysis_sav.py  analysis_soils_parameters.py  analysis_spatial_normals.py  core.py  demo.py  template.py
tests/: conftest.py  test_doctest.py
tests/bcmk/: core.py  qutils_tester.py  test_geo.py  test_tools.py
tests/data/: DataSet_boot.csv  DataSet_data.csv  FileSys_boot.csv  FileSys_data.csv  MbaE_boot.csv  Project_boot.csv  datasets.csv
tests/unit/: __init__.py  test_geo_Solar.py  test_root_DataSet.py  test_root_FileSys.py  test_root_MbaE.py  test_unit_example.py
tutorials/: project_01.html  raster_01.html  timeseries_01.html  univar_01.html  visuals_01.html
